# nalsd-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
dev-config/: identities.toml  platformd.toml
photoshare/: __main__.py  bootstrap.py  main.py  scope.toml
photoshare/migrations/: v002_title_and_indexes.sql
photoshare_demo/: __main__.py  bootstrap.py  main.py
photoshare_demo/migrations/: v001_init.sql
platform_api/: __init__.py  blocks.py  client.py  engine.py  engine_protocol.py  errors.py  manifesto.py  protocol.py  types.py
platform_client/: __init__.py  client.py
platform_engine/: __init__.py  blocks.py  engine.py  engine_protocol.py  scope.py
platformd/: __init__.py  __main__.py  auth.py  blocks.py  config.py  engine.py  identities.py  protocol.py  scope_loader.py  scope_store.py  server.py  session.py
scripts/: bench_service.py  load_test.py  measure_rss.py  minio_mem_sweep.sh  pdf-to-text.sh  provision_and_load.sh  run_e2e_load.py  run_e2e_load.sh
scripts/bench-postgres/: Cargo.toml
scripts/bench-postgres/src/: main.rs
scripts/bench-s3/: Cargo.toml
scripts/bench-s3/src/: main.rs
scripts/k6/: photo-app.ts
scripts/load-test/: Cargo.toml
scripts/load-test-e2e/: Cargo.toml
scripts/load-test-e2e/src/: main.rs
scripts/load-test/src/: main.rs
scripts/minio-debug/: Dockerfile
tests/: test_blocks.py  test_client_http.py  test_client_uds.py  test_e2e_privilege_drop.py  test_engine.py  test_photoshare_demo_pool.py  test_platform_client.py  test_platform_client_uds.py  test_platformd.py  test_scope.py
