[project]
name = "nalsd"
version = "0.1.0"
description = "Runtime infrastructure-from-code prototype"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.150,<4",
    "pulumi-docker>=4.5,<5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psycopg[binary]>=3.1",
    "minio>=7.2",
    "redis>=5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["platform_api", "platformd", "photoshare"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".pulumi", ".pulumi_state", "tmp"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long — formatter handles
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.pulumi/", "\\.pulumi_state/", "tmp/", "build/", "scripts/"]

[[tool.mypy.overrides]]
module = [
    "pulumi.*",
    "pulumi_docker.*",
    "minio.*",
    "psycopg_pool.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
