[package]
name = "load-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"

[profile.release]
opt-level = 2
